--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -18,19 +18,19 @@
     <meta property="og:url" content="https://freeflixx.pages.dev/">
     <meta property="og:title" content="FreeFlixx - Stream Movies & TV Shows For Free">
     <meta property="og:description" content="Watch unlimited movies, TV shows, and anime for free. No subscription required.">
-    <meta property="og:image" content="https://freeflixx.pages.dev/assets/freeflixx.png">
+    <meta property="og:image" content="./assets/freeflixx.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://freeflixx.pages.dev/">
     <meta property="twitter:title" content="FreeFlixx - Stream Movies & TV Shows For Free">
     <meta property="twitter:description" content="Watch unlimited movies, TV shows, and anime for free. No subscription required.">
-    <meta property="twitter:image" content="https://freeflixx.pages.dev/assets/freeflixx.png">
+    <meta property="twitter:image" content="./assets/freeflixx.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://freeflixx.pages.dev/">
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-    <link rel="alternate" href="/sitemap.html" hreflang="x-default" title="HTML Sitemap">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="./sitemap.xml">
+    <link rel="alternate" href="./sitemap.html" hreflang="x-default" title="HTML Sitemap">
 
     <!-- Structured Data for Movie Streaming Website -->
     <script type="application/ld+json">
@@ -63,16 +63,17 @@
     </script>
 
     <!-- Web App Manifest -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./site.webmanifest">
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="FreeFlixx">
-    <link rel="apple-touch-icon" href="/assets/freeflixx.png">
+    <link rel="apple-touch-icon" href="./assets/freeflixx.png">
 
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="assets/freeflixx.ico">
+    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./custom-buttons.css">
+    <link rel="icon" href="./assets/freeflixx.ico">
     <title>FreeFlixx - Stream Movies & TV Shows For Free | No Subscription Needed</title>
 </head>
 
@@ -90,7 +91,7 @@
     <!-- Navigation Menu -->
     <nav class="nav-menu">
         <ul class="nav-list">
-            <li class="nav-item"><a href="/index.html" data-section="all">All</a></li>
+            <li class="nav-item"><a href="index.html" data-section="all">All</a></li>
             <li class="nav-item"><a href="movies/index.html" data-section="movies">Movies</a></li>
             <li class="nav-item"><a href="tvshows/index.html" data-section="tv">TV Shows</a></li>
             <li class="nav-item"><a href="anime/index.html" data-section="anime">Anime</a></li>
@@ -451,7 +452,8 @@
     </button>
 
     <!-- Load script at the end for better performance -->
-    <script src="index.js"></script>
+    <script src="./custom-navigation.js"></script>
+    <script src="./index.js"></script>
 </body>
 
 </html>
