--- a/FreeFlix/index.html
+++ b/FreeFlix/index.html
@@ -91,7 +91,7 @@
     <!-- Navigation Menu -->
     <nav class="nav-menu">
         <ul class="nav-list">
-            <li class="nav-item"><a href="index.html" data-section="all">All</a></li>
+            <li class="nav-item active"><a href="index.html" data-section="all">All</a></li>
             <li class="nav-item"><a href="movies/index.html" data-section="movies">Movies</a></li>
             <li class="nav-item"><a href="tvshows/index.html" data-section="tv">TV Shows</a></li>
             <li class="nav-item"><a href="anime/index.html" data-section="anime">Anime</a></li>
